Email being sent and recieved Notification connection still required

--- a/CrisisApplication/wwwroot/Email/email.html
+++ b/CrisisApplication/wwwroot/Email/email.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width" />
@@ -350,7 +350,7 @@
                     <tr>
                       <td>
                         <p>Hi there,</p>
-                        <p>This is an important alert send by the Centennial Crisis Manager. Please respond your status as safe or unsafe</p>
+                        <p>This is an important alert sent by the Centennial Crisis Manager. Please respond your status as safe or unsafe</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
                             <tr>
@@ -360,7 +360,7 @@
                                     <tr>
                                       <td> <a href="#" target="_blank">  Safe  </a> </td>
 
-							<td> <a href="#" target="_blank" >  Unsafe </a> </td>
+							          <td> <a href="#" target="_blank" >  Unsafe </a> </td>
 
                                     </tr>
                                   </tbody>
