--- a/CrisisApplication/wwwroot/Email/email1.html
+++ b/CrisisApplication/wwwroot/Email/email1.html
@@ -358,9 +358,8 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="#" target="_blank">  Safe  </a> </td>
-
-							          <td> <a href="#" target="_blank" >  Unsafe </a> </td>
+                                      
+                                        <td> <a href="ResponseURL" target="_blank">  Respond </a> </td>
 
                                     </tr>
                                   </tbody>
